Fix consistency in spacing breakpoints Top/bottom spacing was changing after 'tablet' but let/right spacing was changing at 'desktop'. This keeps spacing breaks consistent and changes spacing from 16px to 32px both at 'desktop'

--- a/assets/stylesheets/components/_section-unit.scss
+++ b/assets/stylesheets/components/_section-unit.scss
@@ -1,7 +1,6 @@
 .section-unit {
-  @include element-padding(vertical);
+  @include element-padding(bottom);
   border-bottom: 1px solid tint($nhs-blue, 80%);
-  padding-top: 0;
 
   &:last-child {
     border: 0;
